fixes gap btw img and border in avatar icons

--- a/components/shoutouts/Shoutouts.module.css
+++ b/components/shoutouts/Shoutouts.module.css
@@ -14,7 +14,8 @@
 
 .avatar {
   position: relative;
-  border: 0.14rem solid #ffffff;
+  border: 0.12rem solid #ffffff;
+  background-color: #ffffff;
   border-radius: 50%;
   overflow: hidden;
   width: 1.85rem;
@@ -23,7 +24,6 @@
 }
 
 .avatar > ProfilePicture {
-  width: 100%;
   display: block;
 }
 
